# AnehtaLanguage

./: .gitignore  AnehtaLanguage 语法 BNF设计稿 (未定版).docx  AnehtaLanguage语法规范.md  CLAUDE.md  Cargo.toml  LANGUAGE_SPEC.md  MATRIX_VEC_DESIGN.md  README.md  examples__test_err.ah
aparser/: aast.go  aparser.go  aparser_test.go  aparser_tree.go  last_main
atoken/: atoken.go  atokentype.go  token_test.go
crates/anehta-cli/: Cargo.toml
crates/anehta-cli/src/: main.rs  mat_host_funcs_temp.txt
crates/anehta-codegen-wasm/: Cargo.toml
crates/anehta-codegen-wasm/src/: codegen.rs  lib.rs
crates/anehta-codegen-wasm/src/codegen/: collect_closures.rs  collect_strings.rs  collect_tables.rs  compile_bool.rs  compile_expr.rs  compile_func.rs  compile_stmt.rs  infer.rs  prescan.rs  tests.rs  types.rs
crates/anehta-lexer/: Cargo.toml
crates/anehta-parser/: Cargo.toml
examples/: broadcast_test.ah  broadcast_vec_test.ah  closure_table_test.ah  demo.ah  destructure_test.ah  dotpow_test.ah  fancy_index_test.ah  float_test.ah  mask_test.ah  mat_multiply_test.ah  mat_pow_simple.ah  mat_simd_test.ah  simd_showcase.ah  slice_test.ah  solve_simple.ah  solve_test.ah  stress_test.ah  table_gc_test.ah  table_test.ah  test.ah  timer_demo.ah  transpose_test.ah  vec_debug.ah  vec_dot_test.ah  vec_pow_simple.ah  vec_simd_all_ops.ah  vec_simd_complete.ah  vec_simd_minimal.ah  vec_simd_test.ah  vec_simple_test.ah  vec_test.ah
vscode-anehta/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
vscode-anehta/snippets/: anehta.json
(+15 files in other folders)
